--- a/docs/02.后端技术/00.Linux/00.vim/00.vim 插件的管理与安装.md
+++ b/docs/02.后端技术/00.Linux/00.vim/00.vim 插件的管理与安装.md
@@ -27,12 +27,11 @@ author:
 * Vundle使用类似于Git的语法来指定插件来源，并提供了一组命令来安装、更新和删除插件；
 * 在Vim的配置文件中，用户可以使用Vundle提供的特定语法来列出需要安装的插件，并通过运行Vundle命令来执行插件的安装和更新操作；
 
-两者之间的一些区别如下：
-
-语法：Vim-plug和Vundle都使用类似于Git的语法来指定插件来源，但在某些细节上有所不同。
-性能：Vim-plug在启动速度和加载插件上具有良好的性能特点，而Vundle相对较慢一些。
-功能：Vim-plug提供了一些额外的功能，如并行安装、分组插件、按需加载等，而Vundle提供了一些其他的功能，如插件搜索等。
-社区支持：Vundle是一个成熟且广泛使用的插件管理器，有很多用户和社区支持。Vim-plug相对较新，但也有许多用户和活跃的开发者。
-无论您选择使用Vim-plug还是Vundle，它们都是很好的工具来管理Vim插件。您可以根据个人喜好和需求选择其中之一，并根据相关文档进行配置和使用。
+### 3，两者的区别
+* 语法：Vim-plug和Vundle都使用类似于Git的语法来指定插件来源，但在某些细节上有所不同。
+* 性能：Vim-plug在启动速度和加载插件上具有良好的性能特点，而Vundle相对较慢一些。
+* 功能：Vim-plug提供了一些额外的功能，如并行安装、分组插件、按需加载等，而Vundle提供了一些其他的功能，如插件搜索等。
+* 依赖：两者都依赖于 git 下载插件，所以使用该插件管理工具时，需要先安装 git。
+* 社区：Vundle是一个成熟且广泛使用的插件管理器，有很多用户和社区支持。Vim-plug相对较新，但也有许多用户和活跃的开发者。
 
 <!-- &emsp;&emsp;这是一个注释 -->
