--- a/docs/02.后端技术/00.Linux/00.vim/00.vim 插件的管理与安装.md
+++ b/docs/02.后端技术/00.Linux/00.vim/00.vim 插件的管理与安装.md
@@ -22,7 +22,7 @@ author:
 * Vim-plug使用类似于Git的语法来指定插件来源，并可以按需加载插件，以避免对Vim的启动速度产生负面影响；
 * 要使用Vim-plug，在Vim的配置文件（如~/.vimrc）中添加一些简单的配置即可，然后运行Vim-plug命令来安装和更新插件；
 
-### 2，Vundle:
+### 2，Vundle
 * Vundle（Vim Bundle）是一个流行的Vim插件管理器，它的目标是通过简化配置和操作来提供轻松的插件管理体验；
 * Vundle使用类似于Git的语法来指定插件来源，并提供了一组命令来安装、更新和删除插件；
 * 在Vim的配置文件中，用户可以使用Vundle提供的特定语法来列出需要安装的插件，并通过运行Vundle命令来执行插件的安装和更新操作；
