--- a/docs/02.后端技术/00.Linux/00.vim/00.vim 插件的管理与安装.md
+++ b/docs/02.后端技术/00.Linux/00.vim/00.vim 插件的管理与安装.md
@@ -34,4 +34,25 @@ author:
 * 依赖：两者都依赖于 git 下载插件，所以使用该插件管理工具时，需要先安装 git。
 * 社区：Vundle是一个成熟且广泛使用的插件管理器，有很多用户和社区支持。Vim-plug相对较新，但也有许多用户和活跃的开发者。
 
-<!-- &emsp;&emsp;这是一个注释 -->
+## 二、插件管理工具使用方式
+* 以 Vim-plug 举例
+### 1，安装
+```bash
+curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+
+```
+### 2，配置
+* 编辑 **~/.vimrc** 文件，添加以下内容即可；
+```bash
+call plug#begin('~/.vim/plugged')
+      Plug 'itchyny/lightline.vim'
+call plug#end()
+```
+* 必须以 **plug#begin('~/.vim/plugged')** 开头，以 **plug#end()** 结尾，中间填写需要安装的插件；
+* **~/.vim/plugged** 表示存放插件的目录；
+* 通过访问 **[vimawesome](https://vimawesome.com/)**，查找自己需要安装的插件；
+* 例如安装 **lightline** 插件
+  * 在搜索框查找 lightline，在左侧选择 **VimPlug** 侧边栏；
+  * 复制 `Plug 'itchyny/lightline.vim'` 到 `plug#begin('~/.vim/plugged') 和 plug#end()` 中间；
+  * 在 vim 命令行执行 `source % 和 PlugInstall` 即可；
+<!-- &emsp;&emsp;这是一个空格的注释 -->
