--- a/docs/02.后端技术/00.Linux/00.vim/00.vim 插件的管理与安装.md
+++ b/docs/02.后端技术/00.Linux/00.vim/00.vim 插件的管理与安装.md
@@ -55,4 +55,5 @@ call plug#end()
   * 在搜索框查找 lightline，在左侧选择 **VimPlug** 侧边栏；
   * 复制 `Plug 'itchyny/lightline.vim'` 到 `plug#begin('~/.vim/plugged') 和 plug#end()` 中间；
   * 在 vim 命令行执行 `source % 和 PlugInstall` 即可；
+  ![Alt text](image.png)
 <!-- &emsp;&emsp;这是一个空格的注释 -->
