--- a/docs/02.后端技术/00.Linux/00.vim/00.vim 插件的管理与安装.md
+++ b/docs/02.后端技术/00.Linux/00.vim/00.vim 插件的管理与安装.md
@@ -21,6 +21,10 @@ author:
 * Vim-plug 是一个轻量级、快速且易于使用的Vim插件管理器，它的设计目标是保持简单性和性能；
 * Vim-plug使用类似于Git的语法来指定插件来源，并可以按需加载插件，以避免对Vim的启动速度产生负面影响；
 * 要使用Vim-plug，在Vim的配置文件（如~/.vimrc）中添加一些简单的配置即可，然后运行Vim-plug命令来安装和更新插件；
+* 易于设置：单个文件，无需样板代码；
+* 易于使用：简洁直观的语法；
+* 按需加载，加快启动时间；
+* 可以查看和回滚更新；
 
 ### 2，Vundle
 * Vundle（Vim Bundle）是一个流行的Vim插件管理器，它的目标是通过简化配置和操作来提供轻松的插件管理体验；
@@ -45,15 +49,70 @@ curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.c
 * 编辑 **~/.vimrc** 文件，添加以下内容即可；
 ```bash
 call plug#begin('~/.vim/plugged')
-      Plug 'itchyny/lightline.vim'
+Plug 'itchyny/lightline.vim'
 call plug#end()
 ```
 * 必须以 **plug#begin('~/.vim/plugged')** 开头，以 **plug#end()** 结尾，中间填写需要安装的插件；
 * **~/.vim/plugged** 表示存放插件的目录；
 * 通过访问 **[vimawesome](https://vimawesome.com/)**，查找自己需要安装的插件；
 * 例如安装 **lightline** 插件
+
+  ![lightline](/erlangtui/img/vimawesome.png)
   * 在搜索框查找 lightline，在左侧选择 **VimPlug** 侧边栏；
   * 复制 `Plug 'itchyny/lightline.vim'` 到 `plug#begin('~/.vim/plugged') 和 plug#end()` 中间；
-  * 在 vim 命令行执行 `source % 和 PlugInstall` 即可；
-  ![Alt text](image.png)
+  * 在 vim 命令行执行 `:source % 和 :PlugInstall` 即可；
+  * 点击右上角 `GITHUB` 即可跳转到该插件的github仓库，查看使用方法；
+
+### 3，使用方法
+#### 1，命令
+
+| 命令 | 描述 |
+| ----------------------------------- | ---------|
+| `PlugInstall [name ...] [#threads]` | 安装插件 |
+| `PlugUpdate [name ...] [#threads]`  | 安装或更新插件 |
+| `PlugClean[!]`                      | 删除未列出的插件 |
+| `PlugUpgrade`                       | 更新 Vim-plug 本身 |
+| `PlugStatus`                        | 检查插件的状态 |
+| `PlugDiff`                          | 检查相比上次更新与挂起的更改 |
+| `PlugSnapshot[!] [output path]`     | 生成恢复当前插件快照的脚本  |
+
+* 在命令行使用，如添加 `Plug 'itchyny/lightline.vim'` 之后，执行 `:PlugInstall` 安装该脚本；
+#### 2，选项
+
+| 选项                     | 描述                                      |
+| ----------------------- | ------------------------------------------------ |
+| `branch`/`tag`/`commit` | 指定使用该仓库的Branch/tag/commit        |
+| `rtp`                   | 包含 Vim 插件的子目录            |
+| `dir`                   | 插件的自定义目录                |
+| `as`                    | 为插件使用不同的名称               |
+| `do`                    | 更新后钩子（字符串或函数引用），即插件安装或更新后的动作           |
+| `on`                    | 按需加载：命令或映射<Plug> |
+| `for`                   | 按需加载：文件类型                   |
+| `frozen`                | 除非明确指定，否则不更新 |
+
+* 举例如下：
+```bash
+" 当 NERDTreeToggle 命令首次被使用时，nerdtree 被加载
+Plug 'preservim/nerdtree', { 'on': 'NERDTreeToggle' }
+
+" 多命令被执行
+Plug 'junegunn/vim-github-dashboard', { 'on': ['GHDashboard', 'GHActivity'] }
+
+" 当 clojure 文件被打开时，vim-fireplace 被加载
+Plug 'tpope/vim-fireplace', { 'for': 'clojure' }
+
+" 多文件被打开
+Plug 'kovisoft/paredit', { 'for': ['clojure', 'scheme'] }
+
+” 打开文件并执行某个命令
+Plug 'junegunn/vader.vim',  { 'on': 'Vader', 'for': 'vader' }
+
+" 安装后执行 make 命令
+Plug 'Shougo/vimproc.vim', { 'do': 'make' }
+" 安装后执行 ./install.py' 命令
+Plug 'ycm-core/YouCompleteMe', { 'do': './install.py' }
+```
+
+
+
 <!-- &emsp;&emsp;这是一个空格的注释 -->
