update nerdtree and gdb

--- a/docs/02.后端技术/00.Linux/03.vim/00.vim 插件的管理与安装.md
+++ b/docs/02.后端技术/00.Linux/03.vim/00.vim 插件的管理与安装.md
@@ -42,8 +42,7 @@ author:
 * 以 Vim-plug 举例
 ### 1，安装
 ```bash
-curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
-
+curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim 
 ```
 ### 2，配置
 * 编辑 **~/.vimrc** 文件，添加以下内容即可；
@@ -85,7 +84,7 @@ call plug#end()
 | `dir`                   | 插件的自定义目录                |
 | `as`                    | 为插件使用不同的名称               |
 | `do`                    | 更新后钩子（字符串或函数引用），即插件安装或更新后的动作           |
-| `on`                    | 按需加载：命令或映射<Plug> |
+| `on`                    | 按需加载：命令或映射 `<Plug>` |
 | `for`                   | 按需加载：文件类型                   |
 | `frozen`                | 除非明确指定，否则不更新 |
 
@@ -111,5 +110,6 @@ Plug 'junegunn/vader.vim',  { 'on': 'Vader', 'for': 'vader' }
 Plug 'Shougo/vimproc.vim', { 'do': 'make' }
 " 安装后执行 ./install.py' 命令
 Plug 'ycm-core/YouCompleteMe', { 'do': './install.py' }
+
 ```
 
