--- a/docs/01.语言/02.C++/103.第三方库/03.gflags 介绍.md
+++ b/docs/01.语言/02.C++/103.第三方库/03.gflags 介绍.md
@@ -110,6 +110,33 @@ DEFINE_string(languages, "english,french,german", "comma-separated list of langu
     if (FLAGS_languages.find("flag") != string::npos)
       HandleFinnish();
     ```
+  * 当变量的定义是在命名空间内定义时，**声明的时候也需要带上命名空间**；
+    ```cpp
+    // brpc 中的consul服务的标志定义
+    namespace brpc {
+    namespace policy {
+
+    DEFINE_string(consul_agent_addr, "http://127.0.0.1:8500",
+                  "The query string of request consul for discovering service.");
+    DEFINE_string(consul_service_discovery_url,
+                  "/v1/health/service/",
+                  "The url of consul for discovering service.");
+    }
+    }
+    ```
+    ```cpp
+    // 文件名：main.cc
+    
+    // 在其他文件中声明标志时带上命名空间
+    namespace brpc {
+    namespace policy {
+
+    DECLARE_string(consul_agent_addr,);
+    DECLARE_string(consul_service_discovery_url);
+    // ......
+    }
+    }
+    ```
 
 ### 4，注册标志验证器
 * 为了校验参数是否符合**自定义的要求**，可以为定义标志注册一个验证器函数；
