--- a/docs/01.语言/02.C++/103.第三方库/03.gflags 介绍.md
+++ b/docs/01.语言/02.C++/103.第三方库/03.gflags 介绍.md
@@ -205,8 +205,7 @@ static const bool port_dummy = RegisterFlagValidator(&FLAGS_port, &ValidatePort)
 --helppackage	| 显示和 main() 在相同目录的文件中的flag
 --version	| 打印可执行文件的版本信息
 #### b) 功能标志
-* `--undefok=flagname,...`：这个标志在命令行无定义时不会报错退出，即使在程序中未使用 `--undefok--namename`;
-#### c) 递归标志
+* `--undefok=flagname,...`：这个标志在命令行无定义时不会报错退出，即使在程序中未使用 `--undefok--namename`；
 * `--fromenv=bar`：从环境中读取 bar 标志的值，必须在环境变量定义该值，如 `export FLAGS_bar=yyy`，等效于在命令行使用 `--bar=yyy`，缺省时可以通过
 `--undefok=bar` 忽略错误；
 * `--tryfromenv=foo`：应用程序保留其默认值，并尝试从环境变量中获取，未定义时不会报错；
@@ -223,6 +222,42 @@ gflags::ParseCommandLineFlags(&argc, &argv, true);
 ```
 
 ## 四、使用示例
+### 1，目录结构
+
+::: details
+```sh
+.
+├── CMakeLists.txt
+├── README.md
+├── build.sh 
+├── gflags
+│   ├── AUTHORS.txt
+│   ├── BUILD
+│   ├── CMakeLists.txt
+│   ├── COPYING.txt
+│   ├── ChangeLog.txt
+│   ├── INSTALL.md
+│   ├── README.md
+│   ├── WORKSPACE
+│   ├── appveyor.yml
+│   ├── bazel
+│   ├── cmake
+│   ├── doc
+│   ├── mybuild
+│   ├── src
+│   └── test
+├── main.cc
+└── mybuild
+    ├── CMakeCache.txt
+    ├── CMakeFiles
+    ├── Makefile
+    ├── cmake_install.cmake
+    ├── gflags
+    └── main
+```
+:::
+
+### 2，示例代码
 
 ::: details
 ```cpp
@@ -264,6 +299,45 @@ int main(int argc, char **argv)
 
 ```
 :::
+
+### 3，编译脚本
+::: details
+```cmake
+cmake_minimum_required(VERSION 2.8.12)
+project(gflags_demo)
+
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 11)
+
+set(CMAKE_C_FLAGS       "${CMAKE_C_FLAGS} -g -w -O3 -DNDEBUG -std=c++11")
+set(CMAKE_CXX_FLAGS     "${CMAKE_CXX_FLAGS} -g -w -O3 -DNDEBUG -std=c++11")
+add_subdirectory(gflags)                   # 添加子目录
+
+add_executable(main main.cc)               # 生成目标文件 main
+target_link_libraries(main gflags::gflags) # 链接到 gflags库
+```
+:::
+
+### 4，执行脚本
+::: details
+``` sh
+#!/bin/bash
+
+set -x -e
+
+# git clone git@github.com:gflags/gflags.git 第一次执行时下载
+rm -rf mybuild
+mkdir mybuild
+cd mybuild
+cmake ..
+make
+./main
+./main --version
+./main --help
+./main --port=99999
+```
+:::
+
 
 **参考文章**<br>
 [1] [https://gflags.github.io/gflags/](https://gflags.github.io/gflags/)<br>
