--- a/docs/00.目录页/01.语言.md
+++ b/docs/00.目录页/01.语言.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data:
     path: 01.语言
-    imgUrl: /img/web.png
+    imgUrl: /img/lang.png
     description: go、c++、python、shell等后端语言介绍
 title: 语言
 date: 2023-07-01 21:50:53
@@ -16,5 +16,3 @@ author:
   name: erlangtui
   link: https://github.com/zhangliang6666
 ---
-
-### ttesteest
