--- a/docs/00.目录页/02.后端技术.md
+++ b/docs/00.目录页/02.后端技术.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data:
     path: 02.后端技术
-    imgUrl: /img/ui.png
+    imgUrl: /img/technology.png
     description: mysql、redis、docker、kafka等后端相关技术
 title: 后端技术
 date: 2023-07-01 21:50:54
