--- a/docs/00.目录页/03.计算广告.md
+++ b/docs/00.目录页/03.计算广告.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data:
     path: 03.计算广告
-    imgUrl: /img/other.png
+    # imgUrl: /img/other.png
     description: 广告投放召回等文章
 title: 计算广告
 date: 2023-07-01 21:50:55
