--- a/docs/00.目录页/04.计算机基础.md
+++ b/docs/00.目录页/04.计算机基础.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data:
     path: 04.计算机基础
-    imgUrl: /img/more.png
+    # imgUrl: /img/more.png
     description: 操作系统、计算机网络、数据结构与算法等相关内容
 title: 计算机基础
 date: 2023-07-01 21:50:56
