--- a/docs/00.目录页/05.更多.md
+++ b/docs/00.目录页/05.更多.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data:
     path: 05.更多
-    imgUrl: /img/more.png
+    # imgUrl: /img/more.png
     description: 其他内容
 title: 更多
 date: 2023-07-01 21:50:56
