--- a/docs/01.语言/02.C++/101.编译与调试/02.GDB.md
+++ b/docs/01.语言/02.C++/101.编译与调试/02.GDB.md
@@ -1,5 +1,5 @@
 ---
-title: GDB
+title: gdb
 date: 2023-07-31 23:37:00
 permalink: /pages/9c2f94/
 categories:
@@ -21,7 +21,7 @@ author:
 
 命令名称|命令缩写|命令说明
 |----|----|---|
-run	        |   r	        |   运行一个待调试的程序
+run	        | r	          |   运行一个待调试的程序
 continue    |	c           |	让暂停的程序继续运行
 next        |	n           |	运行到下一行
 step        |	s           |	单步执行，遇到函数会进入
@@ -33,16 +33,16 @@ info        |	i           |	查看断点 / 线程等信息
 frame       |	f           |	切换到当前调用线程的指定堆栈
 break       |	b           |	添加断点
 delete      |	d           |	删除断点
-tbreak      |   tb          |	添加临时断点
+tbreak      | tb          |	添加临时断点
 finish      |	fi          |	结束当前调用函数，回到上一层调用函数处
 backtrace   |	bt          |	查看当前线程的调用堆栈
 thread      |	thread      |	切换到指定线程
 return      |	return      |	结束当前调用函数并返回指定值，到上一层函数调用处
 enable      |	enable      |   启用某个断点
-disable     |   disable     |   禁用某个断点
-watch       |   watch       |   监视某一个变量或内存地址的值是否发生变化
-ptype       |   ptype       |   查看变量类型
-disassemble |   dis         |   查看汇编代码
-set args    |   set args    |   设置程序启动命令行参数
-show args   |   show args   |   查看设置的命令行参数
+disable     | disable     |   禁用某个断点
+watch       | watch       |   监视某一个变量或内存地址的值是否发生变化
+ptype       | ptype       |   查看变量类型
+disassemble | dis         |   查看汇编代码
+set args    | set args    |   设置程序启动命令行参数
+show args   | show args   |   查看设置的命令行参数
 
