--- a/docs/01.语言/02.C++/101.编译与调试/03.cmake.md
+++ b/docs/01.语言/02.C++/101.编译与调试/03.cmake.md
@@ -37,11 +37,11 @@ author:
 ## 二、常用的命令
 ### 1 命令行选项
 #### a) 生成项目构建系统
-::: tips
-CMake是一个构建系统生成器，生成相应构建系统(如：Unix Makefile、Ninja、Visual Studio等)的构建文件，告诉构建系统应当如何操作才能编译代码；
-源树：包含项目源文件和顶级 `CMakeLists.txt` 文件的目录；
-构建树：生成系统文件和生成输出的顶级目录；
-构建器：选择要生成的构建系统类型，默认选择当前平台；
+::: tip
+CMake是一个构建系统生成器，生成相应构建系统(如：Unix Makefile、Ninja、Visual Studio等)的构建文件，告诉构建系统应当如何操作才能编译代码；<br>
+**源树**：包含项目源文件和顶级 `CMakeLists.txt` 文件的目录；<br>
+**构建树**：生成系统文件和生成输出的顶级目录；<br>
+**构建器**：选择要生成的构建系统类型，默认选择当前平台；<br>
 :::
 
 ```cmake
