--- a/docs/02.后端技术/00.Linux/03.vim/00.vim 插件的管理与安装.md
+++ b/docs/02.后端技术/00.Linux/03.vim/00.vim 插件的管理与安装.md
@@ -57,7 +57,7 @@ call plug#end()
 * 通过访问 **[vimawesome](https://vimawesome.com/)**，查找自己需要安装的插件；
 * 例如安装 **lightline** 插件
 
-  ![lightline](/erlangtui/img/vimawesome.png)
+  ![lightline](/img/vimawesome.png)
   * 在搜索框查找 lightline，在左侧选择 **VimPlug** 侧边栏；
   * 复制 `Plug 'itchyny/lightline.vim'` 到 `plug#begin('~/.vim/plugged') 和 plug#end()` 中间；
   * 在 vim 命令行执行 `:source % 和 :PlugInstall` 即可；
