--- a/docs/01.语言/01.Go/00.Go的基本介绍.md
+++ b/docs/01.语言/01.Go/00.Go的基本介绍.md
@@ -3,7 +3,7 @@ title: Go的基本介绍
 date: 2023-07-02 14:30:53
 permalink: /pages/a164c7/
 # titleTag: 原创
-sticky: 1
+# sticky: 1
 categories:
   - 语言
   - Go
