--- a/docs/02.后端技术/00.Linux/01.流量复制技术-tcpcopy.md
+++ b/docs/02.后端技术/00.Linux/01.流量复制技术-tcpcopy.md
@@ -32,7 +32,7 @@ author:
   * 利用 TCPCopy 复制或放大生产流量，验证新版本性能是否达标；
 
 ## 三、架构设计
-![架构图](/image/tcpcopy.png)
+![架构图](/img/tcpcopy.png)
 
 * TCPCOPY 默认使用**原始套接字输入技术**在**网络层**捕获在线数据包并进行必要的处理（包括TCP交互模拟、网络延迟控制和常见的上层交互模拟），并默认使用**原始套接字输出技术**将数据包发送到目标服务器（图中用粉红色箭头表示）；
 * TCPCopy 由两部分组成：tcpcopy 和 intercept；
