--- a/docs/01.语言/02.C++/103.第三方库/03.gflags 介绍.md
+++ b/docs/01.语言/02.C++/103.第三方库/03.gflags 介绍.md
@@ -341,9 +341,9 @@ make
 :::
 
 
-**参考文章**<br>
-[1] [https://gflags.github.io/gflags/](https://gflags.github.io/gflags/)<br>
-[2] [https://cloud.tencent.com/developer/article/1695005](https://cloud.tencent.com/developer/article/1695005)<br>
-[3] [https://izualzhy.cn/gflags-introduction](https://izualzhy.cn/gflags-introduction)<br>
-[4] [https://gohalo.me/post/package-gflags-usage.html](https://gohalo.me/post/package-gflags-usage.html)<br>
-[5] [https://zhuanlan.zhihu.com/p/369214077](https://zhuanlan.zhihu.com/p/369214077)<br>
+>**参考文章**<br>
+>[1] [https://gflags.github.io/gflags/](https://gflags.github.io/gflags/)<br>
+>[2] [https://cloud.tencent.com/developer/article/1695005](https://cloud.tencent.com/developer/article/1695005)<br>
+>[3] [https://izualzhy.cn/gflags-introduction](https://izualzhy.cn/gflags-introduction)<br>
+>[4] [https://gohalo.me/post/package-gflags-usage.html](https://gohalo.me/post/package-gflags-usage.html)<br>
+>[5] [https://zhuanlan.zhihu.com/p/369214077](https://zhuanlan.zhihu.com/p/369214077)<br>
