--- a/docs/02.后端技术/00.Linux/01.流量复制技术-tcpcopy.md
+++ b/docs/02.后端技术/00.Linux/01.流量复制技术-tcpcopy.md
@@ -160,4 +160,79 @@ TCPCopy 不支持使用 SSL/TLS 的服务器应用程序的重放
 6. 助理服务器的操作系统
 您不应ip_forward设置为 true，否则助理服务器无法充当黑洞。
 
+-x <transfer,> use <transfer,> to specify the IPs and ports of the source and target
+               servers. Suppose 'sourceIP' and 'sourcePort' are the IP and port
+               number of the source server you want to copy from, 'targetIP' and
+               'targetPort' are the IP and port number of the target server you want
+               to send requests to, the format of <transfer,> could be as follows:
+               'sourceIP:sourcePort-targetIP:targetPort,...'. Most of the time,
+               sourceIP could be omitted and thus <transfer,> could also be:
+               'sourcePort-targetIP:targetPort,...'. As seen, the IP address and the
+               port number are segmented by ':' (colon), the sourcePort and the
+               targetIP are segmented by '-', and two 'transfer's are segmented by
+               ',' (comma). For example, './tcpcopy -x 80-192.168.0.2:18080' would
+               copy requests from port '80' on current server to the target port
+               '18080' of the target IP '192.168.0.2'.
+-H <ip_addr>   change the localhost IP address to the given IP address
+-c <ip_addr,>  change the client IP to one of IP addresses when sending to the
+               target server. For example,
+               './tcpcopy -x 8080-192.168.0.2:8080 -c 62.135.200.x' would copy
+               requests from port '8080' of current online server to the target port
+               '8080' of target server '192.168.0.2' and modify the client IP to be
+               one of net 62.135.200.0/24.
+-n <num>       use <num> to set the replication times when you want to get a
+               copied data stream that is several times as large as the online data.
+               The maximum value allowed is 1023. As multiple copying is based on
+               port number modification, the ports may conflict with each other,
+               in particular in intranet applications where there are few source IPs
+               and most connections are short. Thus, tcpcopy would perform better
+               when less copies are specified. For example,
+               './tcpcopy -x 80-192.168.0.2:8080 -n 3' would copy data flows from
+               port 80 on the current server, generate data stream that is three
+               times as large as the source data, and send these requests to the
+               target port 8080 on '192.168.0.2'.
+-f <num>       use this parameter to control the port number modification process
+               and reduce port conflications when multiple tcpcopy instances are
+               running. The value of <num> should be different for different tcpcopy
+               instances. The maximum value allowed is 1023.
+-m <num>       set the maximum memory allowed to use for tcpcopy in megabytes,
+               to prevent tcpcopy occupying too much memory and influencing the
+               online system. When the memory exceeds this limit, tcpcopy would quit
+               automatically. The parameter is effective only when the kernel
+               version is 2.6.32 or above. The default value is 1024.
+-M <num>       MTU value sent to backend (default 1500)
+-D <num>       MSS value sent back(default 1460)
+-R <num>       set default rtt value
+-U <num>       set user session pool size in kilobytes(default 1).
+               The maximum value allowed is 63.
+-C <num>       | parallel connections between tcpcopy and intercept.
+               The maximum value allowed is 11(default 2 connections).
+-s <server,>   intercept 服务列表，形如：ip_addr1:port1, ip_addr2:port2, ...
+-t <num>       |  设置会话的超时时间。在超时时间后 tcpcopy 还没收到目标服务器的返回，该会话将被丢弃。当来自目标服务器的响应较慢或应用程序协议基于上下文时，应该设置更大的值。默认值 120 seconds.
+-k <num>       |  设置会话保持的超时时间
+-l <file>      |  设置日志文件
+-r <num>       |  设置会话传输百分比 (integer range:1~100)
+-p <num>       |  设置目标服务器的监听端口，默认值 36524.
+-P <file>      |  设置 pid 存储的文件，仅用于 -d 选项下
+-O             |  仅回放全会话
+-g             |  慢慢回放 gradully
+-v             |  版本
+-h             |  打印帮助并退出
+-d             |  以守护进程的方式运行
+
+
  -->
+
+选项|含义
+----|----
+ -i <device,>  |  要侦听的接口的名称，通常是驱动程序名称后面跟着一个单元号，例如，第一个以太网接口为eth0
+-F <filter>    |  过滤规则(和 pcap 规则一样)
+-n <num>       |  设置最大合并包的数量
+-p <num>       |  设置监听的 TCP 端口号，默认 36524
+-s <num>       |  为 intercept 设置哈希表的尺寸，默认 65536
+-l <file>      |  设置日志文件
+-P <file>      |  设置 pid 存储的文件，仅用于 -d 选项下
+-b <ip_addr>   |  监听接口 (默认 INADDR_ANY, 所有地址)
+-v             |  版本
+-h             |  打印帮助并退出
+-d             |  以守护进程的方式运行
